Fix header menu is open, when has bitrix menu, and on mobile

--- a/src/blocks/components/menu/menu.scss
+++ b/src/blocks/components/menu/menu.scss
@@ -58,6 +58,7 @@
         list-style: none;
         position: relative;
         width: 100%;
+        height: 100%;
     }
 
     &-item {
