--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -360,6 +360,14 @@
                 }
             }
         }
+        position: fixed;
+        z-index: 1000;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        background: #229bd7;
     }
 
     &.menu-opened & {
@@ -387,8 +395,11 @@
         &__inner {
             @include to($break_lg) {
                 padding-top: 24px;
+                padding-bottom: 12px;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.2);
             }
-            z-index: initial;
+            z-index: 1001;
+            background: #229bd7;
         }
 
 
@@ -431,13 +442,7 @@
             top: 0;
             left: 0;
             background: #229bd7;
-
-            & .container {
-                @include lg-block {
-                    border: none;
-                }
-                border-top: 1px solid rgba(255, 255, 255, 0.2);
-            }
+            overflow-y: auto;
         }
     }
 
@@ -446,9 +451,21 @@
             display: none;
         }
 
+        &__inner {
+            background: transparent;
+            box-sizing: border-box;
+            z-index: initial;
+            height: 64px;
+            border-bottom-color: transparent;
+        }
+
         &__menu-block {
             @include lg-block {
                 padding-top: 225px;
+            }
+
+            & > .container {
+                border-top: 1px solid rgba(255, 255, 255, 0.2);
             }
             padding-top: 64px;
         }
